# morphe

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTEXT.md  CONTRACT.md  DESIGN.md  Justfile  LICENSE  MIGRATION.md  PACKAGING.md  PRODUCT.md  README.md  STATUS.md  VISION.md  biome.json  legacy-Morphe-seed.md  orval.config.ts  package.json  playwright.config.ts  playwright.contrast.config.ts  pnpm-lock.yaml  pyproject.toml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.dom.config.ts
.github/workflows/: ci.yml  publish.yml  registry-verify.yml
data/: bamboohr-public-openapi.yaml  capability-seed.md  specs-scope.md
data/evidence/: 50skills.json  asana.json  businesscentral.json  catalog.md  dkplus.json  humanity.json  jira.json  twenty.json
data/seed-mining/: primitives.md  substrate.md
data/specs/: 50skills-journeys-api.yaml  README.md  google-calendar-v3-discovery.json  google-drive-v3-discovery.json  google-gmail-v1-discovery.json  jira-platform-swagger-v3.json  square-api.json
docs/: krepis-surface-style-guide.md  reconstruction-plan.md  redesign-plan.md
docs/adr/: 0001-onboarding-magic-link-and-postmark-email.md  0002-two-stage-ranking-pipeline.md  0003-client-store-contract.md  0004-delegation-surface-choices-only-renderer.md  0005-plate-derived-dialect-pair.md  0006-stage-home-and-intent-engine.md  0007-packaged-library-boundary.md  0008-replace-sokrates-website-with-morphe-consumer.md  0009-keep-morphe-cms-behind-service-seam.md  0010-keep-full-featured-morphe-playground.md  0011-move-sokrates-plate-assets-out-of-morphe.md  0012-cut-over-sokrates-production-deployment-to-website-repo.md  0013-split-morphe-and-sokrates-documentation.md  0014-model-surface-compiler.md  0015-pydantic-ai-ui-streams-at-host-adapter-seam.md  0016-independent-projection-m-package.md  0017-within-remains-a-reserved-socket.md  0018-within-targets-one-explicit-subtree.md  0019-trend-content-kind.md  0020-table-capability.md  0021-operator-first-hierarchy-and-provenance.md
e2e/: contrast-a11y.e2e.ts  contrast-matrix.e2e.ts  edge-surface-contract.e2e.ts
schema/: morphe-decision.schema.json  morphe-delta.schema.json  morphe-grammar.schema.json  morphe-source-surface.schema.json  morphe-surface-artifact.schema.json
scripts/: build-evidence.ts  compiler-build-id.ts  derive-plates.test.ts  derive-plates.ts  embed-corpus.ts  pack-verify.ts  plate-manifest.test.ts  plate-manifest.ts  stub-artifact-store.mjs  stub-source-surface-store.mjs  verify-python-package.py
src/: app-fonts.css  app.css  app.html
viewer/: Dockerfile  README.md  healthcheck.mjs  package.json  svelte.config.js  tsconfig.json  vite.config.ts
(+555 files in other folders)
