[project]
name = "morphe-grammar"
version = "0.1.0"
description = "Pydantic v2 mirror of the Morphe Node grammar."
requires-python = ">=3.12"
dependencies = [
	"pydantic>=2.12.0",
]

[dependency-groups]
dev = [
	"pytest>=8.4.0",
	"ruff>=0.13.0",
	"ty>=0.0.1a23",
]

[tool.uv]
package = true

[tool.uv.sources]
morphe-grammar = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "py"
module-name = "morphe_grammar"

[tool.pytest.ini_options]
testpaths = ["py/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812",
	"D100",
	"D101",
	"D102",
	"D103",
	"D104",
	"D105",
	"D107",
	"ISC001",
	"N815",
	"S101",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "lf"

[tool.ty.src]
include = ["py/morphe_grammar", "py/tests"]
