[project]
name = "morphe-grammar"
version = "0.6.3"
description = "Pydantic v2 mirror of the Morphe Node grammar."
requires-python = ">=3.12"
dependencies = [
	"pydantic>=2.12.0",
]

[project.optional-dependencies]
service = [
	"fastapi>=0.124.0",
	"fastapi-mcp>=0.1.0",
	"httpx>=0.28.0",
	"pydantic-ai-slim[openai]>=1.0.0",
	"pydantic-settings>=2.12.0",
	"uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
	"hypothesis>=6.155.7",
	"jsonschema>=4.26.0",
	"pytest>=8.4.0",
	"ruff>=0.13.0",
	"ty>=0.0.1a23",
]

[tool.uv]
package = true

[tool.uv.sources]
morphe-grammar = { workspace = true }

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "py"
module-name = ["morphe_grammar", "morphe_agent", "morphe_cms", "morphe_contracts", "morphe_surface"]

[tool.pytest.ini_options]
testpaths = ["py/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	"COM812",
	"D100",
	"D101",
	"D102",
	"D103",
	"D104",
	"D105",
	"D107",
	"ISC001",
	"N815",
	"S101",
]

[tool.ruff.lint.flake8-type-checking]
# Pydantic evaluates field annotations at runtime (model_rebuild), so imports used in a
# model's annotations are runtime-required and must NOT move into a TYPE_CHECKING block.
runtime-evaluated-base-classes = ["pydantic.BaseModel", "morphe_contracts.ContractModel"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "lf"

[tool.ty.src]
include = [
	"py/morphe_grammar",
	"py/morphe_agent",
	"py/morphe_cms",
	"py/morphe_contracts",
	"py/morphe_surface",
	"py/tests",
]
